--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
+
 jdk:
-  - oraclejdk8
-after_success:
-    - mvn clean test jacoco:report coveralls:report
+- oraclejdk8
+
+script:
+- mvn clean test jacoco:report coveralls:report
