Ignore Eclipse files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@
 # iPST compilation settings
 install.cfg
 
+# Eclipse projects
+.classpath
+.project
+org.eclipse.core.resources.prefs
+org.eclipse.jdt.core.prefs
+org.eclipse.m2e.core.prefs
