--- a/pom.xml
+++ b/pom.xml
@@ -44,32 +44,34 @@
 
         <java.version>1.8</java.version>
 
-        <maven.compiler.version>2.5.1</maven.compiler.version>
-        <maven.findbugs.version>3.0.3</maven.findbugs.version>
-        <maven.javadoc.version>2.10.3</maven.javadoc.version>
-        <maven.jacoco.version>0.7.6.201602180812</maven.jacoco.version>
+        <maven.compiler.version>3.6.0</maven.compiler.version>
+        <maven.findbugs.version>3.0.4</maven.findbugs.version>
+        <maven.javadoc.version>2.10.4</maven.javadoc.version>
+        <maven.jacoco.version>0.7.7.201606060606</maven.jacoco.version>
         <maven.buildnumber.version>1.4</maven.buildnumber.version>
         <maven.surefire.version>2.19.1</maven.surefire.version>
         <maven.templating.version>1.0.0</maven.templating.version>
-        <maven.jar.version>2.6</maven.jar.version>
-        <maven.assembly.version>2.6</maven.assembly.version>
+        <maven.jar.version>3.0.2</maven.jar.version>
+        <maven.assembly.version>3.0.0</maven.assembly.version>
+        <maven.license.version>3.0</maven.license.version>
+        <maven.coveralls.version>4.3.0</maven.coveralls.version>
 
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.12</commonscompress.version>
-        <commonsmath3.version>3.6</commonsmath3.version>
+        <commonsmath3.version>3.6.1</commonsmath3.version>
         <graphvizapi.version>1.1</graphvizapi.version>
-        <guava.version>19.0</guava.version>
-        <jodatime.version>2.9.2</jodatime.version>
+        <guava.version>20.0</guava.version>
+        <jodatime.version>2.9.6</jodatime.version>
         <junit.version>4.12</junit.version>
-        <logback.version>1.1.6</logback.version>
+        <logback.version>1.1.7</logback.version>
         <mockito.version>1.10.19</mockito.version>
-        <shrinkwrap.version>1.2.3</shrinkwrap.version>
+        <shrinkwrap.version>1.2.6</shrinkwrap.version>
         <sirocco.version>1.0</sirocco.version>
-        <slf4j.version>1.7.19</slf4j.version>
+        <slf4j.version>1.7.21</slf4j.version>
         <supercsv.version>2.4.0</supercsv.version>
         <trove4j.version>3.0.3</trove4j.version>
-        <xmlunit.version>2.1.1</xmlunit.version>
+        <xmlunit.version>2.3.0</xmlunit.version>
     </properties>
 
     <licenses>
@@ -141,7 +143,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>2.11</version>
+                <version>${maven.license.version}</version>
                 <configuration>
                     <header>header.txt</header>
                     <properties>
@@ -207,7 +209,7 @@
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
                     <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>4.2.0</version>
+                    <version>${maven.coveralls.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
