--- a/afs/afs-ws/pom.xml
+++ b/afs/afs-ws/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2017, RTE (http://www.rte-france.com)
+    Copyright (c) 2018, RTE (http://www.rte-france.com)
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -14,24 +14,21 @@
 
     <parent>
         <groupId>com.powsybl</groupId>
-        <artifactId>powsybl-core</artifactId>
+        <artifactId>powsybl-afs</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
+    <artifactId>powsybl-afs-ws</artifactId>
+    <name>AFS WS</name>
+    <description>AFS WS</description>
     <packaging>pom</packaging>
-    <artifactId>powsybl-afs</artifactId>
-    <name>AFS</name>
-    <description>AFS aggregator module</description>
 
     <modules>
-        <module>afs-core</module>
-        <module>afs-ext-base</module>
-        <module>afs-local</module>
-        <module>afs-mapdb</module>
-        <module>afs-mapdb-storage</module>
-        <module>afs-network</module>
-        <module>afs-storage-api</module>
-        <module>afs-ws</module>
+        <module>afs-ws-client</module>
+        <module>afs-ws-client-utils</module>
+        <module>afs-ws-server</module>
+        <module>afs-ws-server-utils</module>
+        <module>afs-ws-storage</module>
+        <module>afs-ws-utils</module>
     </modules>
-
 </project>
