--- a/pom.xml
+++ b/pom.xml
@@ -78,14 +78,14 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <java.version>1.8</java.version>
+        <java.version>10</java.version>
 
         <maven.antrun.version>1.8</maven.antrun.version>
         <maven.assembly.version>3.1.0</maven.assembly.version>
         <maven.build-helper.version>3.0.0</maven.build-helper.version>
         <maven.buildnumber.version>1.4</maven.buildnumber.version>
         <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
-        <maven.compiler.version>3.7.0</maven.compiler.version>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
         <maven.dependency.version>3.1.1</maven.dependency.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
@@ -101,8 +101,8 @@
         <maven.surefire.version>2.22.0</maven.surefire.version>
         <maven.templating.version>1.0.0</maven.templating.version>
 
-        <groovyeclipsecompiler.version>2.9.2-01</groovyeclipsecompiler.version>
-        <groovyeclipsebatch.version>2.4.3-01</groovyeclipsebatch.version>
+        <groovyeclipsecompiler.version>3.0.0-01</groovyeclipsecompiler.version>
+        <groovyeclipsebatch.version>2.5.2-01</groovyeclipsebatch.version>
 
         <sonar.jacoco.reportPaths>
             ../target/jacoco-merge.exec,
@@ -114,6 +114,7 @@
         </sonar.exclusions>
 
         <arquillianbom.version>1.2.0.Final</arquillianbom.version>
+        <asm.version>6.2</asm.version>
         <assertj.version>3.11.0</assertj.version>
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
@@ -123,11 +124,12 @@
         <commonsmath3.version>3.6.1</commonsmath3.version>
         <gdata.version>1.41.1_1</gdata.version>
         <graphvizapi.version>1.1</graphvizapi.version>
-        <groovy.version>2.4.12</groovy.version>
+        <groovy.version>2.4.15</groovy.version>
         <guava.version>20.0</guava.version>
         <jackson.version>2.8.7</jackson.version>
         <jama.version>1.0.3</jama.version>
         <javaeeapi.version>7.0</javaeeapi.version>
+        <jaxb-api.version>2.3.0</jaxb-api.version>
         <jgrapht.version>1.0.1</jgrapht.version>
         <jimfs.version>1.1</jimfs.version>
         <jjwt.version>0.9.0</jjwt.version>
@@ -157,6 +159,20 @@
         <xmlunit.version>2.3.0</xmlunit.version>
     </properties>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>bintray</id>
+            <name>Groovy Bintray</name>
+            <url>https://dl.bintray.com/groovy/maven</url>
+            <releases>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
     <build>
         <plugins>
             <plugin>
@@ -169,11 +185,15 @@
                 </configuration>
                 <dependencies>
                     <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>${asm.version}</version>
+                    </dependency>
+                    <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
                         <version>${groovyeclipsecompiler.version}</version>
                     </dependency>
-                    <!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
@@ -529,6 +549,16 @@
                 <version>${javaeeapi.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>javax.activation-api</artifactId>
+                <version>1.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
                 <version>${jodatime.version}</version>
@@ -588,6 +618,12 @@
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>${groovy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-api.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.tyrus</groupId>
