--- a/pom.xml
+++ b/pom.xml
@@ -469,9 +469,17 @@
                         <version>${maven.javadoc.version}</version>
                         <executions>
                             <execution>
+                                <id>javadoc-jar</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>jar</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>javadoc-aggregate-jar</id>
+                                <phase>package</phase>
+                                <inherited>false</inherited>
+                                <goals>
                                     <goal>aggregate-jar</goal>
                                 </goals>
                             </execution>
