--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,12 @@
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.powsybl</groupId>
     <artifactId>powsybl-core</artifactId>
-    <version>2.1.0-repas-SNAPSHOT</version>
+    <version>2.1.0-repas</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
@@ -32,7 +30,8 @@
         <connection>scm:git:https://github.com/powsybl/powsybl-core.git</connection>
         <developerConnection>scm:git:https://github.com/powsybl/powsybl-core.git</developerConnection>
         <url>https://github.com/powsybl/powsybl-core</url>
-    </scm>
+      <tag>powsybl-core-2.1.0-repas</tag>
+  </scm>
 
     <developers>
         <developer>
@@ -394,7 +393,7 @@
                                 <configuration>
                                     <fail>false</fail>
                                     <rules>
-                                        <dependencyConvergence/>
+                                        <dependencyConvergence />
                                     </rules>
                                 </configuration>
                             </execution>
