--- a/afs/afs-ws/afs-ws-server-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-server-utils/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
