--- a/matpower/matpower-converter/pom.xml
+++ b/matpower/matpower-converter/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-matpower</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.0.0-RC1</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>powsybl-matpower-converter</artifactId>
