--- a/ucte/ucte-util/pom.xml
+++ b/ucte/ucte-util/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-ucte</artifactId>
-        <version>5.0.0-RC1</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>powsybl-ucte-util</artifactId>
