--- a/config-test/pom.xml
+++ b/config-test/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>5.3.0</version>
+        <version>5.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-config-test</artifactId>
