--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </parent>
 
     <artifactId>powsybl-core</artifactId>
-    <version>5.3.0</version>
+    <version>5.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
