--- a/powerfactory/powerfactory-converter/pom.xml
+++ b/powerfactory/powerfactory-converter/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-powerfactory</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.3.0</version>
+        <version>5.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-powerfactory-converter</artifactId>
