--- a/ampl-converter/pom.xml
+++ b/ampl-converter/pom.xml
@@ -89,5 +89,9 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-extensions</artifactId>
+        </dependency>
     </dependencies>
 </project>
