--- a/itools-packager/pom.xml
+++ b/itools-packager/pom.xml
@@ -58,6 +58,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${maven.core.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
