--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -74,6 +74,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-cgmes-completion</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cgmes-conformity</artifactId>
             <version>${project.version}</version>
         </dependency>
